feat：Rust 进阶（Cell内部可变性、循环引用与自引用） feat：常用树形结构

--- a/小目标.md
+++ b/小目标.md
@@ -1,13 +1,12 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-
 - [Todo List](#todo-list)
-  - [工作充电](#%E5%B7%A5%E4%BD%9C%E5%85%85%E7%94%B5)
-  - [音乐](#%E9%9F%B3%E4%B9%90)
-  - [指弹与弹唱曲目](#%E6%8C%87%E5%BC%B9%E4%B8%8E%E5%BC%B9%E5%94%B1%E6%9B%B2%E7%9B%AE)
-  - [阅读](#%E9%98%85%E8%AF%BB)
-  - [瞎折腾](#%E7%9E%8E%E6%8A%98%E8%85%BE)
+  - [工作充电](#工作充电)
+  - [音乐](#音乐)
+  - [指弹与弹唱曲目](#指弹与弹唱曲目)
+  - [阅读](#阅读)
+  - [瞎折腾](#瞎折腾)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -20,7 +19,6 @@
 - [x] node-cli 指令开发学习
 - [x] 《JavaScript 高级程序设计》研读（2021/05/22 阅毕）
 - [x] webpack5 特性学习
-- [ ] Babel 各模块走看
 - [x] Electron 整体学习
 - [x] Electron 练习小项目
 - [x] requirejs
@@ -43,9 +41,6 @@
 - [ ] 《重构：改善既有代码的设计(第 2 版)》
 - [ ] 《SVG 精髓（第 2 版）》
 - [ ] 《JavaScript DOM 高级程序设计》
-- [ ] 《高等数学》宋浩
-- [ ] 《线性代数》宋浩
-- [ ] HLSL 语言简要学习
 - [ ] TypeScript 系统性学习
 
 ## 音乐
