feat：新增一个使用基础链表实现样例工程 feat：补充类型转换类型说明

--- a/后端方向/Rust/Rust进阶/03.深入类型-类型转换.md
+++ b/后端方向/Rust/Rust进阶/03.深入类型-类型转换.md
@@ -70,6 +70,16 @@ fn main() {
 
 **Tips：强制类型转换以及`try_into` 都只能用于数值类型（底层是数值的也可以，比如 char、指针等），不可以用于其他类型。**
 
+try_into 默认是基于你的赋值情况自动推断转换的目标类型，如果你不提供，则无法确定目标类型，如果你不想提供，可以直接使用完全限定语法明确指定目标类型：
+
+```rust
+let val = 1i32;
+match TryInto::<u32>::try_into(val) {
+    Ok(v) => println!("{v}"),
+    Err(_) => println!("error"),
+}
+```
+
 ## 通用类型转换
 
 ### Trait 约束匹配不自动转型
