feat：Vec+索引实现链表

--- a/后端方向/Rust/Rust基础/08.包与模块.md
+++ b/后端方向/Rust/Rust基础/08.包与模块.md
@@ -160,8 +160,8 @@ mod utils;
 
 ```rust
 // mod.rs
-mod add;
-mod sub;
+pub mod add;
+pub mod sub;
 ```
 
 ```rust
@@ -185,8 +185,9 @@ pub fn sub(a: i32, b: i32) -> i32 {
 mod types;
 
 fn main() {
-  println!("1 + 2 = {}", add(1, 2));
-  println!("1 - 2 = {}", sub(1, 2));
+  // 注意：文件本身也是模块系统的一环，所以这里出现了两个 add、sub
+  println!("1 + 2 = {}", utils::add::add(1, 2));
+  println!("1 - 2 = {}", utils::sub::sub(1, 2));
 }
 ```
 
