--- a/后端方向/Rust/Rust基础/23.智能指针.md
+++ b/后端方向/Rust/Rust基础/23.智能指针.md
@@ -420,6 +420,10 @@ fn main() {
 
 这个案例具备三个所有者，并且使用 `RefCell<T>` 来实现内部可变性，允许在多个所有者之间共享数据并修改数据。
 
+## Arc<T> + Mutex<T> 内部可变性模式 （多线程）
+
+使用 Arc 来实现多线程共享数据，使用 Mutex 来实现内部可变性，这两个只能指针都是多线程安全的。
+
 ## Weak<T> 弱引用智能指针，避免循环引用
 
 使用 Rc+RefCell 是可以创建初循环引用，进而导致内存泄漏的，在复杂场景下这个问题可能不是那么好排查。此时可以使用 `Weak<T>`来避免循环引用，明确所有者。
