--- a/后端方向/Rust/Rust基础/27.不安全的Rust.md
+++ b/后端方向/Rust/Rust基础/27.不安全的Rust.md
@@ -30,6 +30,16 @@ unsafe {
 }
 ```
 
+使用只能指针来创建裸指针：
+
+```rust
+let a: Box<i32> = Box::new(10);
+// 需要先解引用a
+let b: *const i32 = &*a;
+// 使用 into_raw 来创建
+let c: *const i32 = Box::into_raw(a);
+```
+
 ### 调用外部 ABI 函数
 
 ```rust
@@ -110,4 +120,17 @@ unsafe trait Foo {
 unsafe impl Foo for i32 {
 // 对应的方法实现
 }
+```
+
+### 访问 union 中的字段
+
+主要用于跟 C 代码进行交互，访问 union 的字段是不安全的，因为 Rust 无法保证当前存储在 union 实例中的数据类型
+
+```rust
+#[repr(C)]
+union MyUnion {
+    f1: u32,
+    f2: f32,
+}
+
 ```
