--- a/后端方向/Rust/Rust基础/30.宏.md
+++ b/后端方向/Rust/Rust基础/30.宏.md
@@ -11,3 +11,22 @@
 理解 AST 与 标记树 (token tree) 之间的区别至关重要。 写宏时，你将同时与这两者打交道。
 
 Tips：Rust 来发中，更多时候是使用宏，而非编写宏。初学 Rust 不在此部分投入过多学习精力，真正需要深入宏定义时再细致学习 AST 以及语法标记树相关内容。
+
+## 自定义 Vec 宏
+
+```rust
+#[macro_export]
+macro_rules! my_vec {
+    ($($x: expr),*) => {
+        {
+            let mut temp_vec = Vec::new();
+            $(
+                temp_vec.push($x);
+            )*
+            temp_vec
+        }
+    };
+}
+
+let arr: Vec<i32> = my_vec!(1, 2, 3, 4, 5);
+```
