feat：Rust 进阶部分完毕

--- a/后端方向/Rust/Rust异步编程/02.async与await、流处理.md
+++ b/后端方向/Rust/Rust异步编程/02.async与await、流处理.md
@@ -83,4 +83,4 @@ fn move_block() -> impl Future<Output = ()> {
 
 类似的原因，在 .await 时使用普通的锁也不安全，例如 Mutex 。原因是，它可能会导致线程池被锁：当一个任务获取锁 A 后，若它将线程的控制权还给执行器，然后执行器又调度运行另一个任务，该任务也去尝试获取了锁 A ，结果当前线程会直接卡死，最终陷入死锁中。
 
-因此，为了避免这种情况的发生，我们需要使用 futures 包下的锁 futures::lock 来替代 Mutex 完成任务。
+因此，为了避免这种情况的发生，**我们需要使用 futures 包下的锁 futures::lock 来替代 Mutex 完成任务**。
