feat：docker镜像加速地址变更

--- a/容器技术/Docker/10.Docker[设置镜像加速].md
+++ b/容器技术/Docker/10.Docker[设置镜像加速].md
@@ -2,8 +2,8 @@
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 **Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [设置使用自建的镜像加速站](#%E8%AE%BE%E7%BD%AE%E4%BD%BF%E7%94%A8%E8%87%AA%E5%BB%BA%E7%9A%84%E9%95%9C%E5%83%8F%E5%8A%A0%E9%80%9F%E7%AB%99)
-  - [创建加速镜像仓库](#%E5%88%9B%E5%BB%BA%E5%8A%A0%E9%80%9F%E9%95%9C%E5%83%8F%E4%BB%93%E5%BA%93)
+- [设置使用自建的镜像加速站](#设置使用自建的镜像加速站)
+  - [创建加速镜像仓库](#创建加速镜像仓库)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -25,8 +25,8 @@
 
 ```json
 {
-  "registry-mirrors": ["http://192.168.6.115:8181"],
-  "insecure-registries": ["192.168.6.115:8181"]
+  "registry-mirrors": ["http://192.168.6.207:8181"],
+  "insecure-registries": ["192.168.6.207:8181"]
 }
 ```
 
