feat：Rust测试时配置显示输出

--- a/后端方向/Rust/Rust基础/00.配置Vscode调试.md
+++ b/后端方向/Rust/Rust基础/00.配置Vscode调试.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [安装插件](#%E5%AE%89%E8%A3%85%E6%8F%92%E4%BB%B6)
 - [配置](#%E9%85%8D%E7%BD%AE)
@@ -59,3 +60,26 @@
 ```
 
 选择一下调试界面的调试目标任务（如果有多个的话），然后按下 F5 即可开始调试。
+
+## 运行 Test 时，printf 不生效
+
+默认情况下，测试程序为了保证输出每个，会拦截测试程序的输出，所以我们在测试程序中使用 `println!` 是不会有任何输出的。
+
+如果希望通过日志来查看测试程序的运行情况，可以使用 `--nocapture` 参数来运行测试程序：
+
+```bash
+cargo test -- --nocapture
+```
+
+也可以为 rust-analyzer 添加配置，这样在我点击 `Run Test` 时，会自动添加 `--nocapture` 参数：
+
+```json
+{
+  "rust-analyzer.runnables.extraTestBinaryArgs": [
+    "--show-output",
+    "--nocapture"
+  ]
+}
+```
+
+在设置中搜索 extraTestBinaryArgs 也能通过 GUI 添加配置
