feat：字符串操作

--- a/后端方向/Rust/Rust基础/10.字符串.md
+++ b/后端方向/Rust/Rust基础/10.字符串.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [Rust 字符串详解](#rust-%E5%AD%97%E7%AC%A6%E4%B8%B2%E8%AF%A6%E8%A7%A3)
   - [基础使用](#%E5%9F%BA%E7%A1%80%E4%BD%BF%E7%94%A8)
@@ -137,3 +138,27 @@ if let Some((start, _)) = char_indices.next() {
     }
 }
 ```
+
+## 使用库操作字符串
+
+对字符串获取片段，裁剪部分是常见需求，在 JavaScript 中，UTF-8 字符边界的处理对开发者是透明的：
+
+```ts
+"你好World".substr(0, 2); // 你好
+```
+
+在 Rust 中，由于 UTF-8 字符的特性，开发者需要手动处理字符边界，一般开发中，可以借助成熟库来完成，避免出错。
+
+引入：`unicode_segmentation` 库，然后按照文档说明样例使用即可：
+
+```rust
+let test_str = String::from("Hello 世界！");
+let prev_str = test_str
+    .graphemes(true)
+    .take(7) // 裁剪前7个UTF-8字符
+    .collect::<Vec<&str>>()
+    .join("");
+println!("prev_str: {}", prev_str);
+```
+
+_Tips: 标准库与社区没有提供针对 UTF-8 字符串的完善操作方案，对于 UTF-8 字符串的常见操作，需要自行封装工具函数，有点儿不方便。_
