feat：UDP流量隧道额外说明

--- a/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
+++ b/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
@@ -1,12 +1,13 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [使用 Gost 加密隧道承载 WG 通讯链路](#%E4%BD%BF%E7%94%A8-gost-%E5%8A%A0%E5%AF%86%E9%9A%A7%E9%81%93%E6%89%BF%E8%BD%BD-wg-%E9%80%9A%E8%AE%AF%E9%93%BE%E8%B7%AF)
-  - [服务端指令](#%E6%9C%8D%E5%8A%A1%E7%AB%AF%E6%8C%87%E4%BB%A4)
-  - [客户端指令](#%E5%AE%A2%E6%88%B7%E7%AB%AF%E6%8C%87%E4%BB%A4)
-- [正确姿势](#%E6%AD%A3%E7%A1%AE%E5%A7%BF%E5%8A%BF)
-- [重要说明](#%E9%87%8D%E8%A6%81%E8%AF%B4%E6%98%8E)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [使用 Gost 加密隧道承载 WG 通讯链路](#使用-gost-加密隧道承载-wg-通讯链路)
+  - [服务端指令](#服务端指令)
+  - [客户端指令](#客户端指令)
+- [正确姿势](#正确姿势)
+- [重要说明](#重要说明)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -36,16 +37,18 @@ gost -L udp://:51820?keepAlive=true -F tcp+mtls://1.1.1.1:11820?udp=true
 
 前面的方式属于技术攻坚，下面的方式才是正确姿势，兼顾了灵活性与安全性：
 
-服务侧：
+服务侧，假设服务侧 IP 为：1.1.1.1，端口为：1111：
 
 ```shell
+# 在服务侧提供动态转发服务，如何转发由客户端自行决定
 gost -L relay+mwss://user:pass@:1111
 ```
 
 客户端：
 
 ```shell
-gost.exe -L udp://:51820/1.1.1.1:51820?keepAlive=true -F relay+mwss://user:pass@:1111
+# 与服务侧通过1111端口建立TLS信道，并将本地51820的UDP数据转发到服务侧的 127.0.0.1:51820 上
+gost.exe -L udp://:51820/127.0.0.1:51820?keepAlive=true -F relay+mwss://user:pass@1.1.1.1:1111
 ```
 
 这种方式，服务端侧，仅提供中转服务，具体目标由客户端自行决定，灵活性比较好；并且增加了连接口令，避免被刷流。
