feat：server config

--- a/后端方向/部署相关/组网技术/6.配置TLS证书Pinning.md
+++ b/后端方向/部署相关/组网技术/6.配置TLS证书Pinning.md
@@ -24,3 +24,16 @@ echo | openssl s_client -servername example.com -connect example.com:443 2>/dev/
   "password": "password"
 }
 ```
+
+## Server Config
+
+keep the server using a stable key to apply for certificates in caddy config:
+
+```caddyfile
+# in tls config
+tls 1111111111@qq.com {
+    key_type ed25519
+    # important:use the same key as client
+    reuse_private_keys
+}
+```
