--- a/后端方向/部署相关/组网技术/7.zerotier组网内网网关配置备忘.md
+++ b/后端方向/部署相关/组网技术/7.zerotier组网内网网关配置备忘.md
@@ -20,3 +20,5 @@ iptables -t mangle -A FORWARD -i ztfmvusnhh -o ens18 -p tcp --tcp-flags SYN,RST 
 ```
 
 核心关注点为：Zerotier 虚拟网卡默认 MTU（2800） 超过物理链路的 MTU（1500），并且默认情况下很多 TCP 包设置了 DF 位，导致 IP 分片失败，数据包无法通过物理链路传输，需要在连接建立伊始就调整 MSS 为 PMTU。
+
+官方参考资料：[iptables-extensions(8) — Linux manual page](https://man7.org/linux/man-pages/man8/iptables-extensions.8.html) 中的 TCPMSS 动作章节。
